completed homepage header and styling

--- a/home/template/home/index.html
+++ b/home/template/home/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% load static %}
 
 {% block page_header %}
@@ -7,7 +8,6 @@
             <div class="col"></div>
         </div>
     </div>
-
 {% endblock %}
 
 {% block content %}
@@ -15,7 +15,9 @@
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-4 logo-font text-black">
-                    The new collections are here
+                    <br>
+                    The new collections
+                    are here
                 </h1>
                 <div class="my-5">
                     <h4>
@@ -25,5 +27,4 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
