--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,3 @@
-
 html {
     height: 100%;
 }
@@ -59,6 +58,16 @@ body {
 
 .bg-black {
     background: #000 !important;
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position:fixed;
+    background: white;
+    z-index: -1;
 }
 
 /* -------------------------------- Media Queries */
